# mlflow-ai-experiment

./: .gitignore  README.md  TASKS.md  config.yaml  conftest.py  environment.yml  mlflow.db  optuna_logistic_regression_hyperopt.db  optuna_test_logreg_0046cf2811ec462a8e6e485b28b015ed.db  optuna_test_logreg_0241f52c2f874c63a16d6d99310c33cb.db  optuna_test_logreg_0326f3e90bef45a49ee284bf5d90b40b.db  optuna_test_logreg_05da1830e47e4a42baaded435b293f75.db  optuna_test_logreg_06eadf780d524c3b9aa847ffc1b6f7ac.db  optuna_test_logreg_06ef64acfc7d44ffac6f72a0182dfd97.db  optuna_test_logreg_07d6f8beba484aadb820c414322143e3.db  optuna_test_logreg_0931948280fd49048f3b141a006a69f8.db  optuna_test_logreg_09cf274ff947492f8fda47df656fc914.db  optuna_test_logreg_0fdf8ec6bd0242ffb7972b95b94bfae2.db  optuna_test_logreg_1375b8433ce84223ac7d00d9acb90478.db  optuna_test_logreg_16572aa89afc4b8dabd5fbb4bf93b5a0.db  optuna_test_logreg_1b06691c21a84f999bdb5ae821727a65.db  optuna_test_logreg_1d1886fec4764ad39f8c7b3ac0e50c82.db  optuna_test_logreg_1f18d5cfcfc7459b8f566a26363db330.db  optuna_test_logreg_21e2d620d6964052ba1d938bdaf173f8.db  optuna_test_logreg_23b2e3dc6aa84f94b63e3a1034b135c6.db  optuna_test_logreg_294d569454854ea8a4ca48a04178581e.db  optuna_test_logreg_328705cbd2f24592bf4503f246805eac.db  optuna_test_logreg_35880fb0d863435abe7138d52cc39f75.db  optuna_test_logreg_37a12428e3824265b9996f6fb25e0a81.db  optuna_test_logreg_388ef685a5314c6fa9c421f7fe3e9bf7.db  optuna_test_logreg_3c35c90c199c46c6aa293c197d69eb57.db  optuna_test_logreg_3e66ca67477a4d449f01c812f31cfebc.db  (+72 more)
app/: __init__.py  (+1 more)
(+116 files in other folders)
