[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-ai-experiment"
version = "0.1.0"
description = "MLflow experiment tracking for comparing state-of-the-art ML models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.8.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "optuna>=3.3.0",
    "ray[tune]>=2.7.0; python_version < '3.13'",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "psutil>=5.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pyright>=1.1.0",
    "pandas-stubs>=2.0.0",
    "types-seaborn>=0.12.0",
    "types-pyYAML>=6.0",
    "types-psutil>=5.9.0",
    "types-joblib>=1.3.0",
    "scikit-learn-stubs>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
packages = ["mlflow_ai_experiment"]